fixes alignment issue

--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ z-index: 100;
 
 header {
     display: flex;
-    align-items: center;
+    align-content: center;
     justify-content: center;
     width: 100vw;
     height: 100vh; 
